--- a/certificates.html
+++ b/certificates.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="tr" class="certificates-page">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sertifikalar</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2821/2821739.png">
 </head>
-<body>
+<body class="certificates-page">
     <div class="certificates-container">
         <a href="index.html" class="back-button">
             <i class="fas fa-arrow-left"></i> Ana Sayfaya Dön
@@ -17,22 +18,141 @@
         
         <div class="certificates-grid">
             <div class="certificate-card">
-                <img src="assets/cert1.jpg" alt="Sertifika 1">
+                <img src="assets/cert-1-2024.png" alt="C Programlama Dili">
                 <div class="certificate-info">
-                    <h3>Embedded Systems Professional</h3>
-                    <p>2023</p>
-                    <a href="#" class="verify-link">Doğrula</a>
+                    <h3>C Programlama Dili</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2024</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> BTK Akademi</p>
+                    <a href="https://www.btkakademi.gov.tr/portal/certificate/validate?certificateId=zXztayjdyl" class="verify-link" target="_blank">Doğrula</a>
                 </div>
             </div>
-
             <div class="certificate-card">
-                <img src="assets/cert2.jpg" alt="Sertifika 2">
+                <img src="assets/cert-2-2022.png" alt="Versiyon Kontrolleri: Git ve GitHub">
                 <div class="certificate-info">
-                    <h3>ARM Cortex Programming</h3>
-                    <p>2022</p>
+                    <h3>Versiyon Kontrolleri: Git ve GitHub</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2022</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> BTK Akademi</p>
+                    <a href="https://www.btkakademi.gov.tr/portal/certificate/validate?certificateId=gK2ho6pKaA" class="verify-link" target="_blank">Doğrula</a>
                 </div>
             </div>
-            <!-- Diğer sertifikalar buraya eklenebilir -->
+            <div class="certificate-card">
+                <img src="assets/cert-3-2024.png" alt="C# Programlama">
+                <div class="certificate-info">
+                    <h3>C# Programlama</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2024</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> BTK Akademi</p>
+                    <a href="https://www.btkakademi.gov.tr/portal/certificate/validate?certificateId=yjahJYljDM" class="verify-link" target="_blank">Doğrula</a>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-4-2022.png" alt="Sıfırdan İleri Seviye Python Programlama">
+                <div class="certificate-info">
+                    <h3>Sıfırdan İleri Seviye Python Programlama</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2022</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> BTK Akademi</p>
+                    <a href="https://www.btkakademi.gov.tr/portal/certificate/validate?certificateId=zXztanKALn" class="verify-link" target="_blank">Doğrula</a>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-5-2024.png" alt="MATLAB Onramp">
+                <div class="certificate-info">
+                    <h3>MATLAB Onramp</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2024</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> MATLAB Coding</p>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-6-2024.png" alt="Simulink Onramp">
+                <div class="certificate-info">
+                    <h3>Simulink Onramp</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2024</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> MATLAB Coding</p>
+                    <a href="https://matlabacademy.mathworks.com/progress/share/report.html?id=a8566a6f-fb3e-4bbb-b2e3-bd2ad80b9004" class="verify-link" target="_blank">Doğrula</a>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-7-2023.jpg" alt="TÜBİTAK SAGE Uzun Dönem Staj">
+                <div class="certificate-info">
+                    <h3>TÜBİTAK SAGE Uzun Dönem Staj</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2023-2024</p>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-8-2023.png" alt="Visual C++ Programming for Desktop Application Development">
+                <div class="certificate-info">
+                    <h3>Visual C++ Programming for Desktop Application Development</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2023</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> Udemy</p>
+                    <a href="https://ude.my/UC-be694a29-755a-4806-ad25-6a90cb6b0ab2" class="verify-link" target="_blank">Doğrula</a>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-9-2023.png" alt="C Programlama Dersleri | C Dilini Baştan Sona Öğrenin">
+                <div class="certificate-info">
+                    <h3>C Programlama Dersleri | C Dilini Baştan Sona Öğrenin</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2023</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> Udemy</p>
+                    <a href="https://ude.my/UC-f49446bb-1a44-434c-90c7-73a6f412b188" class="verify-link" target="_blank">Doğrula</a>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-10-2023.png" alt="C++ Temelleri">
+                <div class="certificate-info">
+                    <h3>C++ Temelleri</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2023</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> Udemy</p>
+                    <a href="https://ude.my/UC-2a429532-79cb-4282-9e57-6392e582e631" class="verify-link" target="_blank">Doğrula</a>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-11-2022.png" alt="TEKNOFEST Uluslarası Efficiency Challange Elektrikli Araçlar Yarışması - Finalist">
+                <div class="certificate-info">
+                    <h3>TEKNOFEST Uluslarası Efficiency Challange Elektrikli Araçlar Yarışması - Finalist</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2022</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> Teknofest</p>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-12-2022.png" alt="Atılım Araştırma Günleri">
+                <div class="certificate-info">
+                    <h3>Atılım Araştırma Günleri</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2022</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> Atılım Üniversitesi</p>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-13-2024.png" alt="IBM ve Kodluyoruz: CyberStart">
+                <div class="certificate-info">
+                    <h3>IBM ve Kodluyoruz: CyberStart</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2024</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> IBM SkillsBuild & Kodluyoruz</p>
+                    <a href="https://verified.sertifier.com/tr/verify/95092955716289" class="verify-link" target="_blank">Doğrula</a>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-14-2022.png" alt="Aselsan İş Hayatı 101 Programı (İlk Mezunlarından)">
+                <div class="certificate-info">
+                    <h3>Aselsan İş Hayatı 101 Programı (İlk Mezunlarından)</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2022</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> Aselsan</p>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-15-2019.png" alt="Siber Güvenlik Kümelenmesi - Python 101">
+                <div class="certificate-info">
+                    <h3>Siber Güvenlik Kümelenmesi - Python 101</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2019</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> Siber Güvenlik Kümelenmesi</p>
+                </div>
+            </div>
+            <div class="certificate-card">
+                <img src="assets/cert-16-2018.png" alt="TÜBİTAK Bilim Fuarları">
+                <div class="certificate-info">
+                    <h3>TÜBİTAK Bilim Fuarları</h3>
+                    <p class="cert-date"><i class="far fa-calendar-alt"></i> 2018</p>
+                    <p class="cert-institution"><i class="fas fa-university"></i> TÜBİTAK</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
