--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Furkan İzgi - Gömülü Sistemler Mühendisi</title>
+    <title>Furkan İzgi</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2821/2821739.png">
@@ -20,7 +20,7 @@
         <div class="profile-section">
             <div class="profile-info">
                 <h1>Furkan İzgi</h1>
-                <h2>Gömülü Sistemler Mühendisi</h2>
+                <h2>Elektrik-Elektronik Mühendisi</h2>
                 <p class="location"><i class="fas fa-map-marker-alt"></i> Ankara, Türkiye</p>
                 <p class="bio">
                     Gömülü Sistemler, Gömülü Arayüz Sistemleri ve Yapay Zeka alanında kendini geliştiren bir Elektrik-Elektronik Mühendisi.
