--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="background-container">
-        <video autoplay muted loop id="background-video">
+        <video autoplay muted loop id="background-video" playsinline>
             <source src="assets/background.mp4" type="video/mp4">
         </video>
         <div class="overlay"></div>
@@ -28,7 +28,7 @@
                 <div class="skills">
                     <div class="skill-category">
                         <h3><i class="fas fa-code"></i> Teknik Beceriler</h3>
-                        <p>Python • C • C++ • Visual C++ • C# • MATLAB • Linux • VxWorks • Git</p>
+                        <p>Python • C • C++ • Visual C++ • C# • MATLAB • Linux • VxWorks • Git • STM32 • Arduino</p>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-microchip"></i> Donanım & Protokoller</h3>
@@ -45,6 +45,9 @@
         <div class="social-links">
             <a href="https://linkedin.com/in/furkan-izgi" class="social-button linkedin" target="_blank">
                 <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
+            <a href="https://www.hackerrank.com/fr_izgi_kn" class="social-button hackerrank" target="_blank">
+                <i class="fab fa-hackerrank"></i> HackerRank
             </a>
             <a href="https://github.com/furkan-izgi" class="social-button github" target="_blank">
                 <i class="fab fa-github"></i> GitHub
