--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         <div class="projects-section">
             <h2><i class="fas fa-code-branch"></i> Projeler</h2>
             <div class="project-card">
+                <h3>BH1750 Driver STM32</h3>
+                <p>STM32 mikrodenetleyiciler için BH1750 Ortam Işığı Sensörü sürücüsü</p>
+                <a href="https://github.com/furkan-izgi/BH1750_STM32_Driver" class="social-button github" target="_blank">
+                    <i class="fab fa-github"></i> Projeyi İncele
+                </a>
+            <div class="project-card">
                 <h3>C Examples</h3>
                 <p>Rastgele seçilmiş C programlama örnek çözümleri</p>
                 <a href="https://github.com/furkan-izgi/C-Examples" class="social-button github" target="_blank">
