--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <a href="https://github.com/furkan-izgi/BH1750_STM32_Driver" class="social-button github" target="_blank">
                     <i class="fab fa-github"></i> Projeyi İncele
                 </a>
+            </div>
             <div class="project-card">
                 <h3>C Examples</h3>
                 <p>Rastgele seçilmiş C programlama örnek çözümleri</p>
