--- a/index.html
+++ b/index.html
@@ -66,8 +66,15 @@
         <div class="projects-section">
             <h2><i class="fas fa-code-branch"></i> Projeler</h2>
             <div class="project-card">
+                <h3>BMP280 Driver STM32</h3>
+                <p>STM32 mikrodenetleyiciler için BMP280 Dijital Basınç Sensörü Sürücüsü</p>
+                <a href="https://github.com/furkan-izgi/BMP280_STM32_Driver" class="social-button github" target="_blank">
+                    <i class="fab fa-github"></i> Projeyi İncele
+                </a>
+            </div>
+            <div class="project-card">
                 <h3>BH1750 Driver STM32</h3>
-                <p>STM32 mikrodenetleyiciler için BH1750 Ortam Işığı Sensörü sürücüsü</p>
+                <p>STM32 mikrodenetleyiciler için BH1750 Ortam Işığı Sensörü Sürücüsü</p>
                 <a href="https://github.com/furkan-izgi/BH1750_STM32_Driver" class="social-button github" target="_blank">
                     <i class="fab fa-github"></i> Projeyi İncele
                 </a>
