--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <div class="skills">
                     <div class="skill-category">
                         <h3><i class="fas fa-code"></i> Teknik Beceriler</h3>
-                        <p>Python • C • C++ • Visual C++ • C# • MATLAB • Linux • VxWorks • Git • STM32 • Arduino</p>
+                        <p>C • Python • C++ • Visual C++ • WinForms • MATLAB • Linux • VxWorks • Git • STM32</p>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-microchip"></i> Donanım & Protokoller</h3>
-                        <p>UART • RS232 • Haberleşme Protokolleri • NI LabVIEW</p>
+                        <p>UART • I2C • SPI • NI LabVIEW</p>
                     </div>
                     <div class="skill-category">
                         <h3><i class="fas fa-globe"></i> Diller</h3>
@@ -45,9 +45,6 @@
         <div class="social-links">
             <a href="https://linkedin.com/in/furkan-izgi" class="social-button linkedin" target="_blank">
                 <i class="fab fa-linkedin"></i> LinkedIn
-            </a>
-            <a href="https://www.hackerrank.com/fr_izgi_kn" class="social-button hackerrank" target="_blank">
-                <i class="fab fa-hackerrank"></i> HackerRank
             </a>
             <a href="https://github.com/furkan-izgi" class="social-button github" target="_blank">
                 <i class="fab fa-github"></i> GitHub
@@ -65,6 +62,13 @@
 
         <div class="projects-section">
             <h2><i class="fas fa-code-branch"></i> Projeler</h2>
+            <div class="project-card">
+                <h3>MPU6050 Driver STM32</h3>
+                <p>STM32 mikrodenetleyiciler için MPU6050 6 Eksenli İvmeölçer ve Jiroskop Sensörü Sürücüsü</p>
+                <a href="https://github.com/furkan-izgi/MPU6050_STM32_Driver" class="social-button github" target="_blank">
+                    <i class="fab fa-github"></i> Projeyi İncele
+                </a>
+            </div>
             <div class="project-card">
                 <h3>BMP280 Driver STM32</h3>
                 <p>STM32 mikrodenetleyiciler için BMP280 Dijital Basınç Sensörü Sürücüsü</p>
